// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LanguageToggle /> { locale: "ar" } renders 1`] = `
<div>
  <div
    class="container"
    dir="ltr"
  >
    <strong>
      <span
        dir="ltr"
      >
        Read in:
      </span>
    </strong>
    <ul>
      <li>
        <span
          dir="ltr"
        >
          English
        </span>
      </li>
      <li>
        <span
          dir="ltr"
        >
          Français
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`<LanguageToggle /> { locale: "en" } renders 1`] = `
<div>
  <div
    class="container"
    dir="ltr"
  >
    <strong>
      Read in:
    </strong>
    <ul>
      <li>
        <a
          href="/"
        >
          Français
        </a>
      </li>
      <li>
        <span
          dir="rtl"
        >
          العربية
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`<LanguageToggle /> { locale: "fr" } renders 1`] = `
<div>
  <div
    class="container"
    dir="ltr"
  >
    <strong>
      Read in:
    </strong>
    <ul>
      <li>
        <a
          href="/"
        >
          English
        </a>
      </li>
      <li>
        <span
          dir="rtl"
        >
          العربية
        </span>
      </li>
    </ul>
  </div>
</div>
`;
